Issue #28732: Fix crash in os.spawnv() with no elements in args Prevents crashes in some other posixmodule.c functions